add equipment feature